k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitch-shifter-backend
  namespace: pitch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pitch-shifter-backend
  template:
    metadata:
      labels:
        app: pitch-shifter-backend
    spec:
      containers:
        - name: api
          image: elroymalayov/pitch-shifter-backend:1.5
          imagePullPolicy: Always
          command: ["python", "-m", "uvicorn"]
          args:
            - "pitch_shifter_backend.main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8000"
            - "--app-dir"
            - "/app/src"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-data
              mountPath: /app/data
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: pitch-shifter-data
