k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pitch-shifter-backend
spec:
  selector:
    app: pitch-shifter-backend
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
